<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.MaterialComponents.Light.DarkActionBar"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:paddingLeft="15dip"
            android:paddingTop="30dip"
            android:paddingRight="15dip"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="30sp" />

        <Space
            android:id="@+id/spaceWelcome"
            android:layout_width="match_parent"
            android:layout_height="178dip" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/signup_message"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="24sp" />

        <Space
            android:id="@+id/spaceSignUp"
            android:layout_width="match_parent"
            android:layout_height="45dip" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:editable="true"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtWNumber"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:editable="true"
            android:ems="10"
            android:hint="@string/w_number"
            android:inputType="numberSigned" />

        <Space
            android:id="@+id/spaceEdit"
            android:layout_width="match_parent"
            android:layout_height="45dip" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="?attr/colorAccent"
            android:text="@string/btn_start"
            android:textColor="?attr/colorButtonNormal"
            app:iconTint="?attr/colorAccent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>